--- a/validator/testdata/feature_tests/regexps.html
+++ b/validator/testdata/feature_tests/regexps.html
@@ -50,8 +50,8 @@
 
   <!--
     Regexp to allow typekit fonts.
-    href value_regex: "https://(use|p)\\.typekit\\.net/\\w+\\.css
-    Thie first two examples are valid, the third example is invalid.
+    href value_regex: "https://(use|p)\\.typekit\\.net/\\w+\\.css"
+    The first two examples are valid, the third example is invalid.
   -->
   <link rel="stylesheet" type="text/css"
         href="https://use.typekit.net/oeg4hgb.css">
