--- a/validator/testdata/feature_tests/regexps.html
+++ b/validator/testdata/feature_tests/regexps.html
@@ -50,11 +50,13 @@
 
   <!--
     Regexp to allow typekit fonts.
-    href value_regex: "https://use\\.typekit\\.net/\\w+\\.css"
-    The first example is valid, the second example is invalid.
+    href value_regex: "https://(use|p)\\.typekit\\.net/\\w+\\.css"
+    The first two examples are valid, the third example is invalid.
   -->
   <link rel="stylesheet" type="text/css"
         href="https://use.typekit.net/oeg4hgb.css">
+  <link rel="stylesheet" type="text/css"
+        href="https://p.typekit.net/oeg4hgb.css">
   <link rel="stylesheet" type="text/css"
         href="https://use.typekit.net/css/oeg4hgb.css">
 
