--- a/examples/amp-video.amp.html
+++ b/examples/amp-video.amp.html
@@ -87,11 +87,11 @@
      Custom controls replace native controls and can be customized through CSS.
   </p>
   <amp-video
-    custom-ctrls
-    custom-ctrls-skin = "light"
-    custom-ctrls-main = "time spacer volume fullscreen"
-    custom-ctrls-mini = "play volume fullscreen"
-    custom-ctrls-floating = "play"
+    custom-controls
+    custom-controls-skin="light"
+    custom-controls-main="time spacer volume fullscreen"
+    custom-controls-mini="play volume fullscreen"
+    custom-controls-floating="play"
     title="Big Buck Bunny"
     artist="Blender Foundation"
     poster="img/bigbuckbunny.jpg"
