--- a/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
+++ b/test/manual/amp-animation/embeds/scrollbound/clock.a4a.html
@@ -87,7 +87,7 @@
   <div class="container">
     <amp-position-observer
       intersection-ratios="1"
-      exclusion-margins="5vh"
+      viewport-margins="5vh"
       on="scroll:clockAnim.seekTo(percent=event.percent)"
       layout="nodisplay"></amp-position-observer>
     <amp-img id="clock-bg" layout="fill" src="../../assets/clock.jpg">
