--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -106,7 +106,7 @@
     <div id="clock-scene-1" class="clock-scene">
       <amp-position-observer
         intersection-ratios="0.8"
-        exclusion-margins="10vh"
+        viewport-margins="10vh"
         on="scroll:clockAnim1.seekTo(percent=event.percent)"
         layout="nodisplay">
       </amp-position-observer>
