--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -4,22 +4,22 @@
     <meta charset=utf-8>
     <script async src='https://cdn.ampproject.org/v0.js'></script>
     <script async custom-element=amp-analytics src='https://cdn.ampproject.org/v0/amp-analytics-0.1.js'></script>
+    <script async custom-element='amp-ad-exit' src='https://cdn.ampproject.org/v0/amp-ad-exit-0.1.js'></script>
     <style amp4ads-boilerplate>body{visibility:hidden}</style>
     <meta name=viewport content=width=device-width,minimum-scale=1>
   </head>
   <body>
-    <a href="/landing.html">
-      <amp-img id=img src='https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg' width=256 height=300></amp-img>
-      <p class=frob>
-        By Golden Trvs Gol twister (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons
-      </p>
-    </a>
     <amp-analytics type="testVendor">
       <script type='application/json'>
         {
           "requests": {
             "sample_visibility_request": "visible=true&url=${canonicalUrl}&title=${title}&acct=${account}",
-            "sample_click_request": "eid=click&acct=${account}"
+            "sample_click_request": "eid=click&acct=${account}",
+            "sample_touch_start_request": "touch start!",
+            "sample_touch_move_request": "touch move!",
+            "sample_touch_end_request": "touch end!",
+            "sample_touch_cancel_request": "touch cancel!",
+            "sample_scroll_request": "scroll!"
           },
           "vars": {
             "account": "sample_account_A123456"
@@ -33,6 +33,34 @@
               "on": "click",
               "selector": "img",
               "request": "sample_click_request"
+            },
+            "sample_img_touch_start_trigger": {
+              "on": "touchstart",
+              "request": "sample_touch_start_request",
+              "selector": "img"
+            },
+            "sample_img_touch_move_trigger": {
+              "on": "touchmove",
+              "request": "sample_touch_move_request",
+              "selector": "img"
+            },
+            "sample_img_touch_end_trigger": {
+              "on": "touchend",
+              "request": "sample_touch_end_request",
+              "selector": "img"
+            },
+            "sample_img_touch_cancel_trigger": {
+              "on": "touchcancel",
+              "request": "sample_touch_cancel_request",
+              "selector": "img"
+            },
+            "sample_scroll_trigger": {
+              "on": "scroll",
+              "scrollSpec": {
+                "verticalBoundaries": [5, 50, 95],
+                "horizontalBoundaries": [90]
+              },
+              "request": "sample_scroll_request"
             }
           },
           "transport": {
@@ -41,6 +69,38 @@
         }
       </script>
     </amp-analytics>
+    <amp-ad-exit id='exit-api'>
+      <script type='application/json'>
+        {
+          "targets": {
+            "target1": {
+              "finalUrl": "/?product1&x=CLICK_X&y=CLICK_Y&e=_elem&shouldNotBeReplaced=AMP_VERSION",
+              "vars": {
+                "_elem": {"defaultValue": "headline"}
+              }
+            }
+          },
+          "filters": {
+            "longDelay": {
+              "type": "clickDelay",
+              "delay": 10000
+            }
+          },
+          "transport": {
+            "beacon": true,
+            "image": true
+          }
+        }
+      </script>
+    </amp-ad-exit>
+    <div id='ad'>
+      <div class='product' on='tap:exit-api.exit(target="target1", _elem="Product 1")'>
+        <amp-img id='img' src='https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg' width=256 height=300></amp-img>
+        <p class='frob'>
+          By Golden Trvs Gol twister (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons
+        </p>
+      </div>
+    </div>
   </body>
 </html>
 
