--- a/examples/analytics-error-reporting.amp.html
+++ b/examples/analytics-error-reporting.amp.html
@@ -9,7 +9,7 @@
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <script async custom-element="amp-anim" src="https://cdn.ampproject.org/v0/amp-anim-0.1.js"></script>
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
-    <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-anim-0.1.js"></script>
     <style amp-custom>
         body {
             font-family: 'Georgia', Serif;
@@ -71,8 +71,8 @@
 <amp-analytics type="googleanalytics">
     <script type="application/json">
         {
-            "vars": {
-                "account":"UA-104520313-1"
+            "requests": {
+                "user-error":"http://localhost:8000/dsdsdsd"
             },
             "triggers": {
                 "user-error": {
