Corrects handling of JSON structure

--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -42,9 +42,16 @@
         {
           "targets": {
             "target1": {
-              "finalUrl": "/?product1&x=CLICK_X&y=CLICK_Y&e=_elem&shouldNotBeReplaced=AMP_VERSION",
+              "finalUrl": "/?product1&x=CLICK_X&y=CLICK_Y&e=_elem&foo=_bar&shouldNotBeReplaced=AMP_VERSION",
               "vars": {
-                "_elem": {"defaultValue": "headline"}
+                "_elem": {
+                  "defaultValue": "headline"
+                },
+                "_bar": {
+                  "vendorAnalyticsSource": "example-3p-vendor",
+                  "vendorAnalyticsResponseKey": "collected-data",
+                  "defaultValue": "bar-default"
+                }
               }
             }
           },
