Corrects syntax error in doc. Reorders a few lines in example

--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -48,9 +48,9 @@
                   "defaultValue": "headline"
                 },
                 "_bar": {
+                  "defaultValue": "bar-default",
                   "vendorAnalyticsSource": "example-3p-vendor",
-                  "vendorAnalyticsResponseKey": "collected-data",
-                  "defaultValue": "bar-default"
+                  "vendorAnalyticsResponseKey": "collected-data"
                 }
               }
             }
