--- a/examples/pwa/pwa.html
+++ b/examples/pwa/pwa.html
@@ -123,7 +123,7 @@
     </template>
   </div>
   <!-- Must be in the very end. -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.3/webcomponents-sd-ce.js"></script>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.3/webcomponents-sd-ce.js"></script>
   <script src="/pwa/pwa.js"></script>
 </body>
 </html>
