Fix typo in viewport handling

--- a/examples/a4a-fullwidth.amp.html
+++ b/examples/a4a-fullwidth.amp.html
@@ -80,6 +80,7 @@
           type="adsense"
           data-ad-client="ca-pub-2383777339857329"
           data-ad-slot="4121425836"
+          data-adtest="on"
           data-auto-format="rspv">
     <div overflow></div>
   </amp-ad>
@@ -99,6 +100,7 @@
             type="adsense"
             data-ad-client="ca-pub-2383777339857329"
             data-ad-slot="4121425836"
+            data-adtest="on"
             data-auto-format="rspv">
       <div overflow></div>
     </amp-ad>
