--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -10,7 +10,15 @@
     <meta name=viewport content=width=device-width,minimum-scale=1>
   </head>
   <body>
-    <amp-analytics type='testVendor'>
+    Before using this example ad, please add the following to vendors.js:
+    <pre>
+      'example-3p-vendor': {
+        "transport": {
+          "iframe": "/examples/analytics-iframe-transport-remote-frame.html"
+        },
+      },
+    </pre>
+    <amp-analytics type='example-3p-vendor'>
       <script type='application/json'>
         {
           "requests": {
@@ -30,9 +38,6 @@
               "selector": "img",
               "request": "sample_click_request"
             }
-          },
-          "transport": {
-            "iframe": "/examples/analytics-iframe-transport-remote-frame.html"
           }
         }
       </script>
