errorReport, introduce error

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -208,7 +208,8 @@
       type="a9"
       data-aax_size="300x250"
       data-aax_pubname="test123"
-      data-aax_src="302">
+      data-aax_src="302"
+      data-a999999999="0">
   </amp-ad>
 
   <h2>AccessTrade</h2>
@@ -223,7 +224,8 @@
       type="adblade"
       data-width="300"
       data-height="250"
-      data-cid="19626-3798936394">
+      data-cid="19626-3798936394"
+      data-bladeeeeeee="00000">
   </amp-ad>
 
   <h2>AdButler</h2>
