Removes response map class

--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -10,7 +10,8 @@
     <meta name=viewport content=width=device-width,minimum-scale=1>
   </head>
   <body>
-    Before using this example ad, please add the following to vendors.js:
+    Before using this example ad, please add the following to
+    extensions/amp-analytics/0.1/vendors.js:
     <pre>
       'example-3p-vendor': {
         "transport": {
