Corrects JSON formatting

--- a/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
+++ b/extensions/amp-ad-network-fake-impl/0.1/data/fake_amp_ad_with_iframe_transport.html
@@ -14,8 +14,8 @@
     extensions/amp-analytics/0.1/vendors.js:
     <pre>
       'example-3p-vendor': {
-        "transport": {
-          "iframe": "/examples/analytics-iframe-transport-remote-frame.html"
+        'transport': {
+          'iframe': '/examples/analytics-iframe-transport-remote-frame.html',
         },
       },
     </pre>
