fixed majority of the travis tests

--- a/examples/amp-compare-slider.amp.html
+++ b/examples/amp-compare-slider.amp.html
@@ -15,7 +15,9 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-  <amp-compare-slider layout="responsive" height="400" width="400"> 
+  <amp-compare-slider layout="responsive" 
+                      height="400" 
+                      width="400"> 
     <img class="topElement" 
          src="https://cdn1.vox-cdn.com/uploads/chorus_asset/file/3637144/scully1.0.jpg">
     <img class="bottomElement" 
