--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -50,6 +50,7 @@
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 </head>
 <body>
   <div class="filterBar">
@@ -1416,5 +1417,21 @@
       type="zucks"
       data-frame-id="_bda46cf5ac">
   </amp-ad>
+
+  <amp-analytics>
+    <script type="application/json">
+      {
+        "requests": {
+          "user-error": "http://localhost:8000/ampadtest"
+        },
+        "triggers": {
+          "user-error": {
+            "on": "user-error",
+            "request": "user-error"
+          }
+        }
+      }
+    </script>
+  </amp-analytics>
 </body>
 </html>
