--- a/examples/analytics-error-reporting.amp.html
+++ b/examples/analytics-error-reporting.amp.html
@@ -39,8 +39,8 @@
 <amp-analytics>
     <script type="application/json">
         {
-            "requests": {
-                "user-error": "http://localhost:8000/dsdsdsd"
+            "vars": {
+                "account":"UA-104520313-1"
             },
             "triggers": {
                 "user-error": {
