--- a/examples/test-error.html
+++ b/examples/test-error.html
@@ -2,7 +2,7 @@
 <html ⚡>
 <head>
     <meta charset="utf-8">
-    <title>Lorem Ipsum</title>
+    <title>Test</title>
     <link rel="canonical" href="amps.html" >
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-<h1>Lorem Ipsum</h1>
+<h1>Test</h1>
 <amp-img
         src="img/sea@1x.jpg"
         srcset="img/sea@1x.jpg 1x, img/sea@2x.jpg 2x"
@@ -39,8 +39,8 @@
 <amp-analytics>
     <script type="application/json">
         {
-            "requests": {
-                "user-error": "http://localhost:8000/dsdsdsd"
+            "vars": {
+                "account":"UA-104520313-1"
             },
             "triggers": {
                 "user-error": {
