add seperate html test file

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -208,8 +208,7 @@
       type="a9"
       data-aax_size="300x250"
       data-aax_pubname="test123"
-      data-aax_src="302"
-      data-a999999999="0">
+      data-aax_src="302">
   </amp-ad>
 
   <h2>AccessTrade</h2>
@@ -224,8 +223,7 @@
       type="adblade"
       data-width="300"
       data-height="250"
-      data-cid="19626-3798936394"
-      data-bladeeeeeee="00000">
+      data-cid="19626-3798936394">
   </amp-ad>
 
   <h2>AdButler</h2>
@@ -1416,21 +1414,5 @@
       type="zucks"
       data-frame-id="_bda46cf5ac">
   </amp-ad>
-
-  <amp-analytics>
-    <script type="application/json">
-      {
-        "requests": {
-          "user-error": "http://localhost:8000/ampadtest"
-        },
-        "triggers": {
-          "user-error": {
-            "on": "user-error",
-            "request": "user-error"
-          }
-        }
-      }
-    </script>
-  </amp-analytics>
 </body>
 </html>
