Fixes yesterday's bug. Now ready to try moving response map out of AmpDoc

--- a/examples/analytics-iframe-transport-remote-frame.html
+++ b/examples/analytics-iframe-transport-remote-frame.html
@@ -21,7 +21,7 @@
                   ' has received an event: ' + event +
                   ' from the creative with transport ID: ' + transportId);
               window.iframeTransportClient.sendMessageToCreative(transportId,
-                  {'received': 'yes'});
+                  {'collected-data': '123456789'});
             });
       });
 
