--- a/examples/analytics-user-error.amp.html
+++ b/examples/analytics-user-error.amp.html
@@ -89,9 +89,9 @@
                 "account":"UA-104520313-1"
             },
             "triggers": {
-                "user-error": {
+                "useError": {
                     "on": "user-error",
-                    "request": "user-error"
+                    "request": "error"
                 }
             }
         }
