update userError and .md

--- a/examples/analytics-error-reporting.amp.html
+++ b/examples/analytics-error-reporting.amp.html
@@ -72,12 +72,12 @@
     <script type="application/json">
         {
             "requests": {
-                "user-error": "http://localhost:8000/dsdsdsd"
+                "error": "http://localhost:8000/dsdsdsd"
             },
             "triggers": {
-                "user-error": {
+                "userError": {
                     "on": "user-error",
-                    "request": "user-error"
+                    "request": "error"
                 }
             }
         }
