report3pError, not passing msg

--- a/examples/3p.error.amp.html
+++ b/examples/3p.error.amp.html
@@ -1421,12 +1421,12 @@
     <script type="application/json">
         {
             "requests": {
-                "user-error": "http://localhost:8000/ampadtest"
+                "error": "http://localhost:8000/ampadtest"
             },
             "triggers": {
-                "user-error": {
+                "userError": {
                     "on": "user-error",
-                    "request": "user-error"
+                    "request": "error"
                 }
             }
         }
