revert ads.amp.html

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -208,8 +208,7 @@
       type="a9"
       data-aax_size="300x250"
       data-aax_pubname="test123"
-      data-aax_src="302"
-      data-shouldbewrong="0">
+      data-aax_src="302">
   </amp-ad>
 
   <h2>AccessTrade</h2>
@@ -1415,21 +1414,5 @@
       type="zucks"
       data-frame-id="_bda46cf5ac">
   </amp-ad>
-
-  <amp-analytics>
-    <script type="application/json">
-      {
-        "requests": {
-          "error": "http://localhost:8000/ampadtest-normal"
-        },
-        "triggers": {
-          "userError": {
-            "on": "user-error",
-            "request": "error"
-          }
-        }
-      }
-    </script>
-  </amp-analytics>
 </body>
 </html>
