--- a/examples/analytics-error-reporting.amp.html
+++ b/examples/analytics-error-reporting.amp.html
@@ -72,7 +72,7 @@
     <script type="application/json">
         {
             "requests": {
-                "error": "http://localhost:8000/dsdsdsd"
+                "error": "https://localhost:8000/ping?en=${errorName}&em=${errorMessage}"
             },
             "triggers": {
                 "userError": {
