code review fixes

--- a/examples/gfycat.amp.html
+++ b/examples/gfycat.amp.html
@@ -23,7 +23,8 @@
         data-gfyid="TautWhoppingCougar"
         width="640"
         height="360"
-        layout="responsive">
+        layout="responsive"
+        >
     </amp-gfycat>
 
     <h3>Fixed layout</h3>
@@ -31,7 +32,8 @@
         id="TautWhoppingCougar"
         data-gfyid="TautWhoppingCougar"
         width="640"
-        height="360">
+        height="360"
+        >
     </amp-gfycat>
 
     <h3>Autoplaying video is paused when out of view</h3>
@@ -40,7 +42,7 @@
             data-gfyid="TautWhoppingCougar"
             width="640"
             height="360"
-            autoplay>
+    >
     </amp-gfycat>
 
     <h3>Autoplay disabled</h3>
@@ -48,7 +50,8 @@
         data-gfyid="BareSecondaryFlamingo"
         width="225"
         height="400"
-        noautoplay>
+        noautoplay
+    >
     </amp-gfycat>
 
     <div class="spacer"></div>
