change max-length to max-items, reorder optional attribs in doc to be alphabetical.

--- a/examples/amp-list.amp.html
+++ b/examples/amp-list.amp.html
@@ -67,7 +67,7 @@
   <!--
  Use the `max-length` attribute to limit the number of list elements displayed
   -->
-  <amp-list width="auto" height="100" layout="fixed-height"  src="list.example.json" max-length="3" 
+  <amp-list width="auto" height="100" layout="fixed-height"  src="list.example.json" max-items="3" 
       template="amp-template-id" class="m1">
   </amp-list>
 
