max-length -> max-items in comments

--- a/examples/amp-list.amp.html
+++ b/examples/amp-list.amp.html
@@ -65,7 +65,7 @@
 
   <!-- ## Limiting List Length -->
   <!--
- Use the `max-length` attribute to limit the number of list elements displayed
+ Use the `max-items` attribute to limit the number of list elements displayed
   -->
   <amp-list width="auto" height="100" layout="fixed-height"  src="list.example.json" max-items="3" 
       template="amp-template-id" class="m1">
