--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -165,6 +165,7 @@
         <option>smartadserver</option>
         <option>smartclip</option>
         <option>sogouad</option>
+        <option>smi2</option>
         <option>sortable</option>
         <option>sovrn</option>
         <option>spotx</option>
@@ -1229,6 +1230,12 @@
       data-w="100%"
       data-h="69">
   </amp-ad>
+
+  <h2>SMI2</h2>
+  <amp-embed height="284"
+          type="smi2"
+          data-blockid="90223">
+  </amp-embed>
 
   <h2>Sortable ad</h2>
   <amp-ad width="300" height="250"
