--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -94,6 +94,7 @@
     </script>
   </amp-animation>
   <main>
+    <div class="spacer"></div>
     <div id="clock-scene-1" class="clock-scene">
       <amp-position-observer
         intersection-ratios="1"
