--- a/examples/amp-position-observer.amp.html
+++ b/examples/amp-position-observer.amp.html
@@ -95,6 +95,10 @@
   </amp-animation>
   <main>
     <div class="spacer"></div>
+
+    <h2>Scrollbound animations with amp-position-observer and amp-animation</h2>
+    <h3>The following animation does one round (12pm-6pm) via scrolling when fully visible between the middle 80% of the viewport</h3>
+
     <div id="clock-scene-1" class="clock-scene">
       <amp-position-observer
         intersection-ratios="1"
