--- a/extensions/amp-gfycat/0.1/test/validator-amp-gfycat.html
+++ b/extensions/amp-gfycat/0.1/test/validator-amp-gfycat.html
@@ -46,8 +46,7 @@
     <amp-gfycat
             data-gfyid="LeanMediocreBeardeddragon"
             width="640"
-            height="360"
-            autoplay>
+            height="360">
     </amp-gfycat>
 
     <h3>Autoplay disabled</h3>
