Cleanup shadowdom polyfill support

--- a/examples/pwa/pwa.html
+++ b/examples/pwa/pwa.html
@@ -12,6 +12,7 @@
       window.location.assign('/pwa');
     }
   </script>
+
   <style>
     body {
       margin: 0;
@@ -35,8 +36,7 @@
 
     .container {
       min-height: 100vh;
-      /* DO NOT SUBMIT */
-      /* background: #eee; */
+      background: #eee;
       overflow: hidden;
     }
 
