--- a/examples/fluid.amp.html
+++ b/examples/fluid.amp.html
@@ -23,4 +23,5 @@
     <div class="artificialfold"></div>
     <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" height="fluid" width=300></amp-ad>
     <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid" width=300></amp-ad>
-</body></html>
+  </body>
+</html>
