vk.com: generate amp-vk-poll extension

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div style="margin: 0 auto; max-width: 1000px; padding: 0 20px;">
-  <h2>VK Posts</h2>
+  <h2>VK Post</h2>
 
   <h3>Layout: Responsive</h3>
 
@@ -52,6 +52,28 @@
         data-hash="KCOFc0kvGc4JUFH0n4026VYycck">
     </amp-vk>
   </div>
+
+  <h2>VK Poll</h2>
+
+  <h3>Layout: Responsive</h3>
+
+  <amp-vk-poll
+      width="400"
+      height="300"
+      layout="responsive"
+      data-appid="6183531"
+      data-pollid="274032322_b0edc316c28c89d03a">
+  </amp-vk-poll>
+
+  <h3>Layout: Fixed</h3>
+
+  <amp-vk-poll
+      width="400"
+      height="300"
+      layout="fixed"
+      data-appid="6183531"
+      data-pollid="274032322_b0edc316c28c89d03a">
+  </amp-vk-poll>
 </div>
 </body>
 </html>
