vk.com: add amp-vk-poll script to examples page

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -12,6 +12,7 @@
     }
   </style>
   <script async custom-element="amp-vk" src="https://cdn.ampproject.org/v0/amp-vk-0.1.js"></script>
+  <script async custom-element="amp-vk-poll" src="https://cdn.ampproject.org/v0/amp-vk-poll-0.1.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
