vk.com: * vk params name convention amends * amp-vk registerElement fix * fix type errors in amp-vk

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -25,8 +25,8 @@
       width="500"
       height="300"
       layout="responsive"
-      data-ownerid="1"
-      data-postid="45616"
+      data-owner_id="1"
+      data-post_id="45616"
       data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
   </amp-vk>
 
@@ -36,8 +36,8 @@
       width="500"
       height="300"
       layout="fixed"
-      data-ownerid="-26713492"
-      data-postid="430306"
+      data-owner_id="-26713492"
+      data-post_id="430306"
       data-hash="A5jIarasOKe-f4mV7GQxXpct-wc">
   </amp-vk>
 
@@ -48,8 +48,8 @@
         width="500"
         height="339"
         layout="flex-item"
-        data-ownerid="-147845620"
-        data-postid="6944"
+        data-owner_id="-147845620"
+        data-post_id="6944"
         data-hash="KCOFc0kvGc4JUFH0n4026VYycck">
     </amp-vk>
   </div>
