vk.com: * vk poll params name convention amends * amp-vk-poll registerElement type errors fixed

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -62,8 +62,8 @@
       width="400"
       height="300"
       layout="responsive"
-      data-appid="6183531"
-      data-pollid="274032322_b0edc316c28c89d03a">
+      data-api_id="6183531"
+      data-poll_id="274032322_b0edc316c28c89d03a">
   </amp-vk-poll>
 
   <h3>Layout: Fixed</h3>
@@ -72,8 +72,8 @@
       width="400"
       height="300"
       layout="fixed"
-      data-appid="6183531"
-      data-pollid="274032322_b0edc316c28c89d03a">
+      data-api_id="6183531"
+      data-poll_id="274032322_b0edc316c28c89d03a">
   </amp-vk-poll>
 </div>
 </body>
