vk.com: update poll examples and update test validator html

--- a/validator/testdata/feature_tests/amp-vk-poll.html
+++ b/validator/testdata/feature_tests/amp-vk-poll.html
@@ -15,6 +15,12 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-  <amp-vk-poll layout="responsive" width="150" height="80"></amp-vk-poll>
+  <amp-vk-poll
+    width="400"
+    height="300"
+    layout="responsive"
+    data-api_id="6183531"
+    data-poll_id="274086843_1a2a465f60fff4699f">
+  </amp-vk-poll>
 </body>
 </html>
