--- a/validator/testdata/feature_tests/amp-vk.html
+++ b/validator/testdata/feature_tests/amp-vk.html
@@ -15,6 +15,13 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
-  <amp-vk layout="responsive" width="150" height="80"></amp-vk>
+  <amp-vk
+    width="500"
+    height="300"
+    layout="responsive"
+    data-owner_id="1"
+    data-post_id="45616"
+    data-hash="Yc8_Z9pnpg8aKMZbVcD-jK45eAk">
+  </amp-vk>
 </body>
 </html>
