Minor changes to resizing logic.

--- a/examples/fluid.amp.html
+++ b/examples/fluid.amp.html
@@ -21,7 +21,9 @@
     <h1>AMP Static Image DFP Reservation.</h1>
     <p>Tests a static image ad in an AMP page.</p>
     <div class="artificialfold"></div>
-    <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" height="fluid" width=300></amp-ad>
-    <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid" width=300></amp-ad>
+    <div style="margin-left: 50%">
+      <amp-ad type=doubleclick data-slot="/30497360/native_v2/iu0/iu1/iu2" height="fluid"></amp-ad>
+    </div>
+    <!--<amp-ad type=doubleclick data-slot="/30497360/native_v2/iu7" height="fluid"></amp-ad>-->
   </body>
 </html>
