--- a/examples/visual-tests/amp-by-example/amp-by-example.html
+++ b/examples/visual-tests/amp-by-example/amp-by-example.html
@@ -314,7 +314,7 @@
   <!-- End Sidebar -->
   <!-- End Navbar -->
         <header class="www-header">
-      <h1 class="mb4 px2 col-12 sm-col-8 mx-auto">Lean AMP by Example</h1>
+      <h1 class="mb4 px2 col-12 sm-col-8 mx-auto">Learn AMP by Example</h1>
       <span class="h3 block mb4 px2 col-12 sm-col-8 mx-auto">AMP by Example gives a hands-on introduction to Accelerated Mobile Pages based on code and live samples. <span class="xs-hide sm-hide">Learn how to create web pages with AMP and how to effectively use AMP components.</span></span>
     </header>
   <amp-selector layout="container">
